Changes in the HTML page, initial version.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,258 @@
-Hello World
+﻿<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+	<title>Bruno Martins | Instituto Superior Técnico (ULisboa)</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+	<meta name="Keywords" content="Bruno Martins, Technical University of Lisbon" />
+	<meta name="Description" content="Professor at Instituto Superior Técnico, University of Lisbon, Portugal." />
+	<link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
+	<link rel="stylesheet" type="text/css" media="screen" href="iststyle.css" />
+	<link rel="stylesheet" type="text/css" media="print" href="print.css" />
+</head>
+<body>
+	<div id="header">
+<div id="logoist">
+	<a href="http://tecnico.ulisboa.pt/"><img src="istlogo.png"/></a></div>
+</div>
+<div id="perfnav">
+	<ul>
+		<li>&nbsp;</li>
+	</ul>
+</div>
+<div id="holder">
+<table id="bigtable" width="100%" border="0" cellpadding="0" cellspacing="0">
+<tr>
+<td id="latnav_container" width="155px" nowrap="nowrap">
+	<div id="latnav">
+	<ul>
+		<li><a href="#contacts">Contacts</a></li>
+		<li><a href="#teaching">Teaching</a></li>
+		<li><a href="#research">Research</a></li>
+		<li><a href="#publications">Publications</a></li>
+		<li><a href="#students">Students</a></li>
+	</ul>
+</div>
+
+</td>
+<td width="100%" colspan="3" id="main">
+
+<table border=0 width="100%">
+	<tr>
+		<td>
+			<table border=0 cellspacing=0 cellpadding=0 width="100%">
+				<tr>
+					<td>
+						<table border=0 cellspacing=0 cellpadding=0>
+							<tr>
+								<td>
+									<img border="0" src="my-photo.jpg" width="150">
+								</td>
+							<tr>
+						</table>
+					</td>
+				</tr>
+				<tr>
+					<td><h1>Bruno Martins</h1></td>
+				</tr>
+				<tr>
+					<td>Professor at the <a href="http://www.dei.ist.utl.pt/">Department of Computer Science and Engineering</a> of <a href="http://www.ist.utl.pt/">Instituto Superior T&eacute;cnico</a> in the <a href="http://www.ulisboa.pt/">University of Lisbon</a> <i>(formerly, Technical University of Lisbon)</i></td>
+				</tr>
+				<tr>
+					<td>Researcher in the Information and Decision Support Systems Lab at <a href="https://www.inesc-id.pt">INESC-ID</a>.</td>
+				</tr>
+				<tr>
+					<td>&nbsp;</td>
+				</tr>
+				<tr>
+					<td><h2><a name="contacts">Contacts</a></h2></td>
+				</tr>
+				<tr>
+					<td>
+						<strong>Address:</strong><br/>						
+						Bruno Emanuel Martins<br/>
+						INESC-ID<br/>
+						Rua Alves Redol, 9<br/>
+						1000-029 Lisbon<br/>
+						Portugal<br/>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<strong>Phone: </strong>+351 93 481 01 58
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<strong>Office: </strong>435 (ext. 1372)
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<strong>E-mail: </strong>
+						<script language="JavaScript">
+							var at = "@";
+							var dot = ".";
+							var first = "b"+"r"+"u"+"n"+"o";
+							var middle = "g";
+							var last = "m"+"a"+"r"+"t"+"i"+"n"+"s";
+							var domain = "t"+"e"+"c"+"n"+"i"+"c"+"o"+dot+"u"+"l"+"i"+"s"+"b"+"o"+"a"+dot+"p"+"t";
+							var address = first + dot + middle + dot + last + at + domain;
+							document.write("<a href='" + "m"+"a"+"i"+"l"+"t"+"o"+":" + address + "'>" + address + "</a>");
+						</script>
+					</td>
+				</tr>  
+				<tr>
+					<td>
+						<strong>Web: </strong><a href="http://web.tecnico.ulisboa.pt/bruno.g.martins/">http://web.tecnico.ulisboa.pt/bruno.g.martins/</a>
+					</td>
+				</tr>
+				<tr>
+					<td>&nbsp;</td>
+				</tr>
+			</table>
+		</td>
+		<td>&nbsp;</td>
+		<!-- <td align="right" valign="top" width="200">
+			<table border=0 cellspacing=0 cellpadding=0>
+				<tr align="center">
+					<td><img src="book-cover.jpg"/></td>
+				</tr>
+				<tr align="center">
+					<td><img src="springer.ico" width="16" height="16"/> <a href="my-book-url">Springer</a> <img src="amazon.ico" width="16" height="16"/> <a href="my-book-url">Amazon</a></td>
+				</tr>
+			</table>
+		</td> -->
+	</tr>
+</table>
+
+<table>
+	<tr>
+		<td>
+			<h2><a name="teaching">Teaching</a></h2>
+		</td>
+	</tr>
+    <tr>
+		<td>
+			2015-2016 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/TInv/2015-2016/1-semestre">Tópicos de Investigação</a> (IST,DEIC)<br/>
+		</td>
+    </tr>
+	<tr>
+		<td>&nbsp;</td>
+	</tr>
+    <tr>
+		<td>
+			<h2><a name="research">Research Areas</i></a></h2>
+	</td>
+	</tr>
+	<tr>
+		<td>
+			Geographic Information Retrieval, Processing Geospatial Language<br/>
+			Text Mining, Information Extraction and Natural Language Processing<br/>
+		</td>
+    </tr>
+	<tr>
+		<td>&nbsp;</td>
+	</tr>
+    <tr>
+		<td>
+			<h2><a name="publications">Publications</a></h2>
+		</td>
+	</tr>
+    <tr>
+		<td>
+<!--
+			<h3>Books</h3>
+
+			<ul>
+
+<li>Bruno Martins, <i>Geospatial Information Extraction from Text</i>, Morgan & Claypool Synthesis Series, 2015 </li>
+
+			</ul>
+-->
+
+			<h3>Journal Papers</h3>
+
+			<ul>
+
+<li>Authors, <i>Title</i>, Journal, vol. XX, no. X, 2015 [<a href="papers/ferreira12strength.pdf">PDF</a>]</li>
+
+			</ul>
+
+			<h3>Conference and Workshop Papers</h3>
+
+			<ul>
+
+<li>Authors, <i>Title</i>, Conference Name, 2015 [<a href="papers/vasilyev13delays.pdf">PDF</a>] </li>
+
+			</ul>
+
+<!--			<h3>Book Chapters</h3>
+
+			<ul>
+
+<li>Authors, <i>Title</i>, Conference Name, 2015 [<a href="papers/vasilyev13delays.pdf">PDF</a>] </li>
+
+			</ul> -->
+
+<!--			<h3>Other Publications</h3>
+
+			<ul>
+
+<li>Authors, <i>Title</i>, Conference Name, 2015 [<a href="papers/vasilyev13delays.pdf">PDF</a>] </li>
+-->
+
+			</ul>
+
+			<h3>PhD Thesis</h3>
+
+			<ul>
+
+<li>Bruno Martins, <i>Geographically Aware Web Information Retrieval</i>, PhD Thesis, FCUL, 2009 (<i>supervised by Mário J. Silva</i>)</li>
+
+			</ul>
+
+<!--			<h3>Invited Talks</h3>
+
+			<ul>
+
+<li>Bruno Martins, <i>Title</i>, Location, September 2015</li>
+			
+			</ul> -->
+			
+		</td>
+    </tr>
+    <tr>
+		<td>
+			<h2><a name="students">Students</a></h2>
+		</td>
+    </tr>
+    <tr>
+		<td>
+			<h3>PhD Students</h3>
+			<ul>
+			<li>Student Name 1, <i>Title</i>, FCUL (<i>co-supervised with </i>)</li>
+			<li>Student Name 2, <i>Title</i>, IST</li>
+			</ul>
+			<h3>MSc Students</h3>
+			<ul>
+			<li>Student Name, <i>Title</i>, IST, 2015</li>
+			<li>Student Name, <i>Title</i>, IST, 2015</li>
+		</ul>
+		</td>
+    </tr>
+</table>
+
+<!-- InstanceEndEditable -->
+</td>
+</tr>
+</table>
+</div>
+<!-- BEGIN FOOTER --> 
+<div id="footer">
+<div id="foot_links">
+<strong>Last modified: 2015-10-03</strong>
+</div>
+<div id="foot_copy">&copy; 2015 Instituto Superior Técnico</div>
+<div class="clear"></div>
+</div>
+</body>
+</html>
