--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ﻿<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-	<title>Bruno Martins | Instituto Superior Técnico (ULisboa)</title>
+	<title>Bruno Martins | Instituto Superior Técnico, University of Lisbon</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 	<meta name="Keywords" content="Bruno Martins, Technical University of Lisbon" />
 	<meta name="Description" content="Professor at Instituto Superior Técnico, University of Lisbon, Portugal." />
@@ -132,7 +132,7 @@
 	</tr>
     <tr>
 		<td>
-			2015-2016 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/TInv/2015-2016/1-semestre">Tópicos de Investigação</a> (IST,DEIC)<br/>
+			2015-2016 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/TInv/2015-2016/1-semestre">Research Topics</a> (IST,DEIC)<br/>
 		</td>
     </tr>
 	<tr>
