--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						<table border=0 cellspacing=0 cellpadding=0>
 							<tr>
 								<td>
-									<div class="circular"></div>
+									<img border="0" src="my-photo.jpg" width="150" style="border-radius: 50%;">
 								</td>
 							<tr>
 						</table>
