--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	<tr>
 		<td>
 			<table border=0 cellspacing=0 cellpadding=0 width="100%">
-				<tr>
+				<!-- <tr>
 					<td>
 						<table border=0 cellspacing=0 cellpadding=0>
 							<tr>
@@ -49,7 +49,7 @@
 							<tr>
 						</table>
 					</td>
-				</tr>
+				</tr> -->
 				<tr>
 					<td><h1>Bruno Martins</h1></td>
 				</tr>
@@ -111,6 +111,13 @@
 			</table>
 		</td>
 		<td>&nbsp;</td>
+		<td align="right" valign="top" width="200">
+			<table border=0 cellspacing=0 cellpadding=0>
+				<tr align="center">
+					<td><img src="my-photo.jpg" width="200" style="border-radius: 50%;"/></td>
+				</tr>
+			</table>
+		</td>
 		<!-- <td align="right" valign="top" width="200">
 			<table border=0 cellspacing=0 cellpadding=0>
 				<tr align="center">
