--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
 					</td>
 				</tr>
 				<tr>
+					<td>&nbsp;</td>
+				</tr>
+				<tr>
 					<td>
 						<strong>E-mail: </strong>
 						<script language="JavaScript">
