--- a/index.html
+++ b/index.html
@@ -54,13 +54,7 @@
 					<td><h1>Bruno Martins</h1></td>
 				</tr>
 				<tr>
-					<td>Professor at the <a href="http://www.dei.ist.utl.pt/">Department of Computer Science and Engineering</a> of <a href="http://www.ist.utl.pt/">Instituto Superior T&eacute;cnico</a> in the <a href="http://www.ulisboa.pt/">University of Lisbon</a></td>
-				</tr>
-				<tr>
-					<td><i>(formerly, Technical University of Lisbon)</i></td>
-				</tr>
-				<tr>
-					<td>&nbsp;</td>
+					<td>Professor at the <a href="http://www.dei.ist.utl.pt/">Department of Computer Science and Engineering</a> of <a href="http://www.ist.utl.pt/">Instituto Superior T&eacute;cnico</a> in the <a href="http://www.ulisboa.pt/">University of Lisbon</a>.</td>
 				</tr>
 				<tr>
 					<td>Researcher in the Information and Decision Support Systems Lab at <a href="https://www.inesc-id.pt">INESC-ID</a>.</td>
