--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 <td id="latnav_container" width="155px" nowrap="nowrap">
 	<div id="latnav">
 	<ul>
-		<li><a href="#contacts">Contacts</a></li>
-		<li><a href="#teaching">Teaching</a></li>
-		<li><a href="#research">Research</a></li>
-		<li><a href="#publications">Publications</a></li>
-		<li><a href="#students">Students</a></li>
+		<li><a style="font-size: 10px;" href="#contacts">Contacts</a></li>
+		<li><a style="font-size: 10px;" href="#teaching">Teaching</a></li>
+		<li><a style="font-size: 10px;" href="#research">Research</a></li>
+		<li><a style="font-size: 10px;" href="#publications">Publications</a></li>
+		<li><a style="font-size: 10px;" href="#students">Students</a></li>
 	</ul>
 </div>
 
@@ -74,6 +74,9 @@
 						1000-029 Lisbon<br/>
 						Portugal<br/>
 					</td>
+				</tr>
+				<tr>
+					<td>&nbsp;</td>
 				</tr>
 				<tr>
 					<td>
