--- a/index.html
+++ b/index.html
@@ -143,34 +143,39 @@
 			<h2><a name="teaching">Teaching</a></h2>
 		</td>
 	</tr>
-    <tr>
+    	<tr>
 		<td>
 			2015-2016 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/TInv/2015-2016/1-semestre">Research Topics</a> (IST,DEIC)<br/>
 		</td>
-    </tr>
+    	</tr>
 	<tr>
 		<td>&nbsp;</td>
 	</tr>
-    <tr>
-		<td>
-			<h2><a name="research">Research Areas</i></a></h2>
-	</td>
+    	<tr>
+		<td><h2><a name="research">Research Areas</i></a></h2></td>
 	</tr>
 	<tr>
 		<td>
 			Geographic Information Retrieval, Processing Geospatial Language<br/>
 			Text Mining, Information Extraction and Natural Language Processing<br/>
 		</td>
-    </tr>
+    	</tr>
 	<tr>
 		<td>&nbsp;</td>
 	</tr>
-    <tr>
+    	<tr>
 		<td>
 			<h2><a name="publications">Publications</a></h2>
 		</td>
 	</tr>
-    <tr>
+	<tr>
+		<td>Updated information is available from my academic profiles: <a href="https://scholar.google.com/citations?user=VQMUt8kAAAAJ&hl=en">Google Scholar</a> | <a href="http://dblp.uni-trier.de/pers/hd/m/Martins:Bruno">DBLP</a> | <a href="https://orcid.org/0000-0002-3856-2936">ORCID</a><br/>
+		</td>
+    	</tr>
+	<tr>
+		<td>&nbsp;</td>
+	</tr>
+        <tr>
 		<td>
 <!--
 			<h3>Books</h3>
