--- a/index.html
+++ b/index.html
@@ -93,6 +93,24 @@
 				</tr>
 				<tr>
 					<td>
+						<strong>ORCID: </strong>0000-0002-3856-2936
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<strong>ResearcherID: </strong>J-9735-2015
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<strong>Scopus Author ID: </strong>8546762500
+					</td>
+				</tr>
+				<tr>
+					<td>&nbsp;</td>
+				</tr>
+				<tr>
+					<td>
 						<strong>E-mail: </strong>
 						<script language="JavaScript">
 							var at = "@";
