--- a/index.html
+++ b/index.html
@@ -187,8 +187,7 @@
 		</td>
 	</tr>
 	<tr>
-		<td>Updated information is available from my academic profiles: <a href="https://scholar.google.com/citations?user=VQMUt8kAAAAJ&hl=en">Google Scholar</a> | <a href="http://dblp.uni-trier.de/pers/hd/m/Martins:Bruno">DBLP</a> | <a href="https://orcid.org/0000-0002-3856-2936">ORCID</a><br/>
-		</td>
+		<td>Updated information is available from my academic profiles: <a href="https://scholar.google.com/citations?user=VQMUt8kAAAAJ&hl=en">Google Scholar</a> | <a href="http://dblp.uni-trier.de/pers/hd/m/Martins:Bruno">DBLP</a> | <a href="https://orcid.org/0000-0002-3856-2936">ORCID</a> | <a href="http://dl.acm.org/author_page.cfm?id=81300139701">ACM Digital Library</a></td>
     	</tr>
 	<tr>
 		<td>&nbsp;</td>
