--- a/index.html
+++ b/index.html
@@ -63,6 +63,13 @@
 					<td>&nbsp;</td>
 				</tr>
 				<tr>
+					<td><strong>Short Bio: </strong>Bruno Martins is an assistant professor at the Computer Science and Engineering Department of IST and a researcher at the Information and Decision Support Systems Lab of INESC-ID, where he works on problems related to the general areas of information retrieval, text mining, and the geographical information sciences. He has been
+involved in several research projects related to geospatial aspects in information access and retrieval, and he has accumulated a significant expertise in addressing challenges at the intersection of information retrieval and the geographical information sciences (i.e., in an area that is often referred to as geographical information retrieval).</td>
+				</tr>
+				<tr>
+					<td>&nbsp;</td>
+				</tr>
+				<tr>
 					<td><h2><a name="contacts">Contacts</a></h2></td>
 				</tr>
 				<tr>
