--- a/index.html
+++ b/index.html
@@ -176,6 +176,12 @@ involved in several research projects related to geospatial aspects in informati
     	<tr>
 		<td>
 			2015-2016 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/TInv/2015-2016/1-semestre">Research Topics</a> (IST,DEIC)<br/>
+			2014/2015 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/RGI25/2014-2015/1-semestre">Information Processing and Retrieval</a> (IST,MEIC)<br/>
+			2014/2015 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/BD8/2014-2015/1-semestre">Databases</a> (IST,LEIC,LERC)<br/>
+			2014/2015 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/IBD-Ead/2014-2015/1-semestre">Introduction to Data Bases</a> (MISE)<br/>
+			2014/2015 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/TInv/2014-2015/1-semestre">Research Topics</a> (IST,DEIC)<br/>
+			2014/2015 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/RInf/2014-2015/1-semestre">Information Retrieval</a>(IST,DEIC)<br/>
+			2014/2015 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/GTI225/2014-2015/1-semestre">Data Analysis and Integration</a> (IST,MEIC)<br/>
 		</td>
     	</tr>
 	<tr>
