--- a/index.html
+++ b/index.html
@@ -182,6 +182,8 @@ involved in several research projects related to geospatial aspects in informati
 			2014/2015 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/TInv/2014-2015/1-semestre">Research Topics</a> (IST,DEIC)<br/>
 			2014/2015 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/RInf/2014-2015/1-semestre">Information Retrieval</a>(IST,DEIC)<br/>
 			2014/2015 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/GTI225/2014-2015/1-semestre">Data Analysis and Integration</a> (IST,MEIC)<br/>
+			2013/2014 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/AOBD10/2013-2014/2-semestre">Data Administration in Information Systems</a> (IST,MEIC,MERC)<br/>
+			2013/2014 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/SIG10/2013-2014/2-semestre">Systems for Geo-Referenced Information</a>(IST,MEIC)<br/>
 		</td>
     	</tr>
 	<tr>
