--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ involved in several research projects related to geospatial aspects in informati
 
 			<ul>
 
-<li>Bruno Martins, <i>Geographically Aware Web Information Retrieval</i>, PhD Thesis, FCUL, 2009 (<i>supervised by Mário J. Silva</i>)</li>
+<li>Bruno Martins, <i>Geographically Aware Web Information Retrieval</i>, PhD Thesis, FCUL, 2009 (<i>supervised by Prof. Mário J. Silva</i>)</li>
 
 			</ul>
 
@@ -284,14 +284,51 @@ involved in several research projects related to geospatial aspects in informati
 		<td>
 			<h3>PhD Students</h3>
 			<ul>
-			<li>Student Name 1, <i>Title</i>, FCUL (<i>co-supervised with </i>)</li>
-			<li>Student Name 2, <i>Title</i>, IST</li>
+			<li>Tiago Gonçalves, <i> Visual Analysis of Human Mobility Data</i>, FCUL (<i>co-supervised with Prof. Ana Paula Afonso</i>)</li>
+			<li>Miguel Costa, <i>Summarizing News Articles</i>, IST</li>
 			</ul>
 			<h3>MSc Students</h3>
 			<ul>
-			<li>Student Name, <i>Title</i>, IST, 2015</li>
-			<li>Student Name, <i>Title</i>, IST, 2015</li>
-		</ul>
+			<li>Ricardo Pereira, <i>Aplicação da norma OGC-WPS ao registo de informação cadastral</i>, IST, 2015 (<i>co-supervised with Prof. Mário Rui Gomes</i>)</li>
+			<li>Nelson Veríssimo, <i>Análise de logs de motores de busca</i>, IST, 2015 (<i>co-supervised with Prof. Pável Calado</i>)</li>
+			<li>Pedro Medeiros, <i>Monitorização e testes de performance em serviços Web geográficos</i>, IST, 2015 (<i>co-supervised with Prof. José Borbinha</i>)</li>
+			<li>Ivo Anastácio, <i>Publicidade online com suporte ao contexto geográfico</i>, IST, 2015 (<i>co-supervised with Prof. Pável Calado</i>)</li>
+			<li>Emanuel Rita, <i>Serviços de mapas com suporte à criação de mapas temáticos</i>, IST, 2015 (<i>co-supervised with Prof. José Borbinha</i>)</li>
+			<li>André Lucas, <i>Recomendação de programas de televisão </i>, IST, 2015 (<i>co-supervised with Prof. Andreas Wichert</i>)</li>
+			<li>Ricardo Alves Gonçalves, <i>TESEU, Técnologia de pesquisa para a Europeana </i>, IST, 2015 (<i>co-supervised with Prof. José Borbinha</i>)</li>
+			<li>Vitor Sequeira, <i>Classificação automática e hierarquica de documentos Web </i>, IST, 2015 (<i>co-supervised with Prof. Pável Calado</i>)</li>
+			<li>André Soares, <i>Desenho e implementação de um gazetteer</i>, IST, 2015 (<i>co-supervised with Prof. José Borbinha</i>)</li>
+			<li>Pedro Martins, <i>Interfaces para motores de busca com capacidades geo-temporais</i>, IST, 2015 (<i>co-supervised with Prof. Manuel Fonseca</i>)</li>
+			<li>Catarina Moreira, <i>Pesquisa de peritos com restrições geográficas</i>, IST, 2015 (<i>co-supervised with Prof. Pável Calado</i>)</li>
+			<li>Erik Wennberg, <i>Extracção e rastreio geo-temporal de tópicos em textos</i>, IST, 2015 (<i>co-supervised with Prof. Pável Calado</i>)</li>
+			<li>Diogo Santos, <i>Extracção de opiniões/sentimentos desde documentos textuais</i>, IST, 2015 (<i>co-supervised with Prof. Pável Calado</i>)</li>
+			<li>Sérgio Soares, <i>Extracção de informação biográfica desde documentos textuais</i>, IST, 2015 (<i>co-supervised with Prof. Pável Calado</i>)</li>
+			<li>Vitor Loureiro, <i>Reconhecimento e desambiguação de expressões temporais em textos </i>, IST, 2015 (<i>co-supervised with Prof. Pável Calado</i>)</li>
+			<li>Rui Candeias, <i>Associação automática de fotos a documentos com relatos de viagens</i>, IST, 2015</li>
+			<li>Ricardo Candeias, <i>Extracção de metadados desde artigos científicos</i>, IST, 2015 (<i>co-supervised with Prof. Pável Calado</i>)</li>
+			<li>André Nunes, <i>Desambiguação de entidades em redes sociais </i>, IST, 2015 (<i>co-supervised with Prof. Pável Calado</i>)</li>
+			<li>João Domingos, <i>Sistemas de recomendação com restrições geográficas</i>, IST, 2015</li>
+			<li>Ana Silva, <i>Anotação automática de fotos georreferenciadas</i>, IST, 2015 (<i>co-supervised with Prof. Pável Calado</i>)</li>
+			<li>João Vicente, <i>Aprendizagem automática para ordenação de resultados em motores de busca</i>, IST, 2015 (<i>co-supervised with Prof. Pável Calado</i>)</li>
+			<li>Nelson Gonçalves, <i>Detecção de duplicados em bases de dados de nomes de locais</i>, IST, 2015 (<i>co-supervised with Prof. Helena Galhardas</i>)</li>
+			<li>Carolina Bento, <i>Descoberta de pessoas influentes em redes sociais</i>, IST, 2015 (<i>co-supervised with Prof. Pável Calado</i>)</li>
+			<li>Duarte Dias, <i>Prospecção de opiniões em textos e análise da sua distribuição geográfica
+			<li>Luís Santos, <i>Resolução de referências a nomes de locais em documentos</i>, IST, 2015 (<i>co-supervised with Prof. Luísa Coheur</i>)</li>
+			<li>Diogo Simões, <i>Limpeza de dados representados em XML através de programas em XQuery</i>, IST, 2015 (<i>co-supervised with Prof. Helena Galhardas</i>)</li>
+			<li>Pedro Carloto, <i>Extracção de informação desde referências bibliográficas</i>, IST, 2015 (<i>co-supervised with Prof. José Borbinha</i>)</li>
+			<li>João Santos, <i>Desambiguação de entidades em textos</i>)</li>
+			<li>João Pereira, <i>Extracção de relações desde documentos de texto</i>, IST, 2015 (<i>co-supervised with Prof. Helena Galhardas</i>)</li>
+			<li>António Amaral, <i>Identificação de parafrases e aplicações em FAQ retrieval</i>, IST, 2015 (<i>co-supervised with Prof. Pável Calado</i>)</li>
+			<li>Cecília Raposo, <i>Recomendação de conteúdos textuais no contexto de um sistema para gestão da inovação</i>, IST, 2015 (<i>co-supervised with Prof. Pável Calado</i>)</li>
+			<li>Indira Brito, <i>Desenvolvimento de modelos de previsão com base em textos</i>, IST, 2015</li>
+			<li>Eduardo Cunha, <i>Caracterização de regiões urbanas com base em dados de redes sociais baseadas na localização
+			<li>David Forte, <i>Geração de redes entre entidades mencionadas em textos</i>, IST, 2015</li>
+			<li>Ruben Raposo, <i>Classificação de locais em históricos de localização</i>, IST, 2015</li>
+			<li>Alfredo Tavares, <i>Geocodificação de fotos com base no conteúdo</i>, IST, 2015 (<i>co-supervised with Prof. Alfredo Ferreira</i>)</li>
+			<li>Fernando Melo, <i>Geocodificação automática de documentos</i>, IST, 2015</li>
+			<li>André Leal, <i>Reconhecimento e desambiguação de entidades em textos Biomédicos</i>, FCUL, 2015 (<i>co-supervised with Prof. Francisco Couto</i>)</li>
+			<li>João Oliveira, <i>Análise de Corpora Jornalístico através das Ocorrências de N-Gramas</i>, FCUL, 2015 (<i>co-supervised with Prof. Francisco Couto</i>)</li>
+			</ul>
 		</td>
     </tr>
 </table>
