--- a/index.html
+++ b/index.html
@@ -240,13 +240,14 @@ involved in several research projects related to geospatial aspects in informati
 
 			</ul>
 
-<!--			<h3>Book Chapters</h3>
+			<h3>Book Chapters</h3>
 
 			<ul>
 
-<li>Authors, <i>Title</i>, Conference Name, 2015 [<a href="papers/vasilyev13delays.pdf">PDF</a>] </li>
+<li>Mário Silva, Bruno Martins and Miguel Costa. <i>Avaliação conjunta de recuperação de informação da Web portuguesa</i>, Chapter in Diana Saints (eds), Avaliação conjunta: um novo paradigma no processamento computacional da língua portuguesa, IST Press, 2006 [<a href="http://www.linguateca.pt/aval_conjunta/">book webpage</a>] </li>
+<li>Nuno Cardoso, Bruno Martins, Daniel Gomes and Mário J. Silva. <i>WPT 03: a primeira colecção pública proveniente de uma recolha da web portuguesa</i>, Chapter in Diana Saints (eds), Avaliação conjunta: um novo paradigma no processamento computacional da língua portuguesa, IST Press, 2006 [<a href="http://www.linguateca.pt/aval_conjunta/">book webpage</a>] </li>
 
-			</ul> -->
+			</ul> 
 
 <!--			<h3>Other Publications</h3>
 
@@ -284,8 +285,8 @@ involved in several research projects related to geospatial aspects in informati
 		<td>
 			<h3>PhD Students</h3>
 			<ul>
-			<li>Tiago Gonçalves, <i> Visual Analysis of Human Mobility Data</i>, FCUL (<i>co-supervised with Prof. Ana Paula Afonso</i>)</li>
-			<li>Miguel Costa, <i>Summarizing News Articles</i>, IST</li>
+			<li>Tiago Gonçalves, <i> Visual Analysis of Human Mobility Data</i>, FCUL (<i>ongoing co-supervision with Prof. Ana Paula Afonso</i>)</li>
+			<li>Miguel Costa, <i>Summarizing News Articles</i>, IST (<i>ongoing</i>)</li> 
 			</ul>
 			<h3>MSc Students</h3>
 			<ul>
