--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ involved in several research projects related to geospatial aspects in informati
 			2014/2015 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/BD8/2014-2015/1-semestre">Databases</a> (IST,LEIC,LERC)<br/>
 			2014/2015 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/IBD-Ead/2014-2015/1-semestre">Introduction to Data Bases</a> (MISE)<br/>
 			2014/2015 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/TInv/2014-2015/1-semestre">Research Topics</a> (IST,DEIC)<br/>
-			2014/2015 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/RInf/2014-2015/1-semestre">Information Retrieval</a>(IST,DEIC)<br/>
+			2014/2015 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/RInf/2014-2015/1-semestre">Information Retrieval</a> (IST,DEIC)<br/>
 			2014/2015 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/GTI225/2014-2015/1-semestre">Data Analysis and Integration</a> (IST,MEIC)<br/>
 			2013/2014 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/AOBD10/2013-2014/2-semestre">Data Administration in Information Systems</a> (IST,MEIC,MERC)<br/>
 			2013/2014 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/SIG10/2013-2014/2-semestre">Systems for Geo-Referenced Information</a>(IST,MEIC)<br/>
@@ -228,7 +228,11 @@ involved in several research projects related to geospatial aspects in informati
 
 			<ul>
 
-<li>Authors, <i>Title</i>, Journal, vol. XX, no. X, 2015 [<a href="papers/ferreira12strength.pdf">PDF</a>]</li>
+<li>João Santos, Ivo Anastácio and Bruno Martins, <i>Desambiguação de Entidades Mencionadas em Textos na Língua Portuguesa ou Espanhola</i>, IEEE Latin America, vol. 13, no. 3, 2015 [<a href="papers/ferreira12strength.pdf">PDF</a>]</li>
+<li>Catarina Moreira, Pável Calado and Bruno Martins, <i>Learning to Rank Academic Experts in the DBLP Dataset</i>, Expert Systems, vol. 13, no. 3, 2014 [<a href="papers/ferreira12strength.pdf">PDF</a>]</li>
+<li>João Santos, Ivo Anastácio and Bruno Martins, <i>Using Machine Learning Methods for Disambiguating Place References in Textual Documents</i>, Springer GeoJournal, vol. 13, no. 3, 2014 [<a href="papers/ferreira12strength.pdf">PDF</a>]</li>
+<li>Eduardo Cunha and Bruno Martins, <i>Using One-Class Classifiers and Multiple Kernel Learning For Defining Imprecise Geographic Regions</i>, Springer GeoJournal, vol. 13, no. 3, 2014 [<a href="papers/ferreira12strength.pdf">PDF</a>]</li>
+<li>Mário J. Silva, Bruno Martins, Marcirio Keys, Nuno Cardoso, Ana Paula Alfonso, <i>Adding Geographic Scopes to Web Resources</i>, Computers, Environment and Urban Systems, vol. 30, no. 4, 2006 [<a href="papers/ferreira12strength.pdf">PDF</a>]</li>
 
 			</ul>
 
