--- a/index.html
+++ b/index.html
@@ -240,7 +240,10 @@ involved in several research projects related to geospatial aspects in informati
 
 			<ul>
 
-<li>Authors, <i>Title</i>, Conference Name, 2015 [<a href="papers/vasilyev13delays.pdf">PDF</a>] </li>
+<li>David Batista, Bruno Martins and Mário J. Silva, <i>Semi-Supervised Bootstrapping of Relationship Extractors with Distributional Semantics</i>, Proceedings of the Conference on Empirical Methods in Natural Language Processing, 2015 [<a href="papers/paper.pdf">PDF</a>] </li>
+<li>Tiago Gonçalves, Bruno Martins and Ana Paula Afonso, <i>Improving Spatial Awareness for Human Trajectory Visualization in Space-Time Cubes</i>, Proceedings of the International Conference on Human-Computer Interaction, 2015 [<a href="papers/paper.pdf">PDF</a>] </li>
+<li>Iman Mirrezaei, Bruno Martins and Isabel Cruz, <i>The Triplex Approach for Recognizing Semantic Relations from Noun Phrases, Appositions, and Adjectives</i>, Proceedings of the Workshop on Knowledge Discovery and Data Mining meets Linked Open Data, 2015 [<a href="papers/paper.pdf">PDF</a>] </li>
+<li>Fernando Melo and Bruno Martins, <i>Geocoding Textual Documents Through a Hierarchy of Linear Classifiers</i>, Proceedings of the Portuguese Conference on Artificial Intelligence, 2015 [<a href="papers/paper.pdf">PDF</a>] </li>
 
 			</ul>
 
