--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ involved in several research projects related to geospatial aspects in informati
 			2014/2015 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/RInf/2014-2015/1-semestre">Information Retrieval</a> (IST,DEIC)<br/>
 			2014/2015 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/GTI225/2014-2015/1-semestre">Data Analysis and Integration</a> (IST,MEIC)<br/>
 			2013/2014 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/AOBD10/2013-2014/2-semestre">Data Administration in Information Systems</a> (IST,MEIC,MERC)<br/>
-			2013/2014 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/SIG10/2013-2014/2-semestre">Systems for Geo-Referenced Information</a>(IST,MEIC)<br/>
+			2013/2014 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/SIG10/2013-2014/2-semestre">Systems for Geo-Referenced Information</a> (IST,MEIC)<br/>
 		</td>
     	</tr>
 	<tr>
@@ -320,7 +320,7 @@ involved in several research projects related to geospatial aspects in informati
 			<li>João Vicente, <i>Aprendizagem automática para ordenação de resultados em motores de busca</i>, IST, 2015 (<i>co-supervised with Prof. Pável Calado</i>)</li>
 			<li>Nelson Gonçalves, <i>Detecção de duplicados em bases de dados de nomes de locais</i>, IST, 2015 (<i>co-supervised with Prof. Helena Galhardas</i>)</li>
 			<li>Carolina Bento, <i>Descoberta de pessoas influentes em redes sociais</i>, IST, 2015 (<i>co-supervised with Prof. Pável Calado</i>)</li>
-			<li>Duarte Dias, <i>Prospecção de opiniões em textos e análise da sua distribuição geográfica
+			<li>Duarte Dias, <i>Prospecção de opiniões em textos e análise da sua distribuição geográfica</i>, IST, 2015
 			<li>Luís Santos, <i>Resolução de referências a nomes de locais em documentos</i>, IST, 2015 (<i>co-supervised with Prof. Luísa Coheur</i>)</li>
 			<li>Diogo Simões, <i>Limpeza de dados representados em XML através de programas em XQuery</i>, IST, 2015 (<i>co-supervised with Prof. Helena Galhardas</i>)</li>
 			<li>Pedro Carloto, <i>Extracção de informação desde referências bibliográficas</i>, IST, 2015 (<i>co-supervised with Prof. José Borbinha</i>)</li>
