--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@ involved in several research projects related to geospatial aspects in informati
 			<li>António Amaral, <i>Identificação de parafrases e aplicações em FAQ retrieval</i>, IST, 2015 (<i>co-supervised with Prof. Pável Calado</i>)</li>
 			<li>Cecília Raposo, <i>Recomendação de conteúdos textuais no contexto de um sistema para gestão da inovação</i>, IST, 2015 (<i>co-supervised with Prof. Pável Calado</i>)</li>
 			<li>Indira Brito, <i>Desenvolvimento de modelos de previsão com base em textos</i>, IST, 2015</li>
-			<li>Eduardo Cunha, <i>Caracterização de regiões urbanas com base em dados de redes sociais baseadas na localização
+			<li>Eduardo Cunha, <i>Caracterização de regiões urbanas com base em dados de redes sociais baseadas na localização</i>, IST, 2015</li>
 			<li>David Forte, <i>Geração de redes entre entidades mencionadas em textos</i>, IST, 2015</li>
 			<li>Ruben Raposo, <i>Classificação de locais em históricos de localização</i>, IST, 2015</li>
 			<li>Alfredo Tavares, <i>Geocodificação de fotos com base no conteúdo</i>, IST, 2015 (<i>co-supervised with Prof. Alfredo Ferreira</i>)</li>
