--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Luís Santos, <i>Resolução de referências a nomes de locais em documentos</i>, IST, 2015 (<i>co-supervised with Prof. Luísa Coheur</i>)</li>
 			<li>Diogo Simões, <i>Limpeza de dados representados em XML através de programas em XQuery</i>, IST, 2015 (<i>co-supervised with Prof. Helena Galhardas</i>)</li>
 			<li>Pedro Carloto, <i>Extracção de informação desde referências bibliográficas</i>, IST, 2015 (<i>co-supervised with Prof. José Borbinha</i>)</li>
-			<li>João Santos, <i>Desambiguação de entidades em textos</i>)</li>
+			<li>João Santos, <i>Desambiguação de entidades em textos</i>, IST, 2015</li>
 			<li>João Pereira, <i>Extracção de relações desde documentos de texto</i>, IST, 2015 (<i>co-supervised with Prof. Helena Galhardas</i>)</li>
 			<li>António Amaral, <i>Identificação de parafrases e aplicações em FAQ retrieval</i>, IST, 2015 (<i>co-supervised with Prof. Pável Calado</i>)</li>
 			<li>Cecília Raposo, <i>Recomendação de conteúdos textuais no contexto de um sistema para gestão da inovação</i>, IST, 2015 (<i>co-supervised with Prof. Pável Calado</i>)</li>
