--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ involved in several research projects related to geospatial aspects in informati
 	<tr>
 		<td>
 			Geographic Information Retrieval, Processing Geospatial Language<br/>
-			Text Mining, Information Extraction and Natural Language Processing<br/>
+			Text Mining, Information Extraction, Information Retrieval and Natural Language Processing<br/>
 		</td>
     	</tr>
 	<tr>
