--- a/index.html
+++ b/index.html
@@ -228,11 +228,11 @@ involved in several research projects related to geospatial aspects in informati
 
 			<ul>
 
-<li>João Santos, Ivo Anastácio and Bruno Martins, <i>Desambiguação de Entidades Mencionadas em Textos na Língua Portuguesa ou Espanhola</i>, IEEE Latin America, vol. 13, no. 3, 2015 [<a href="papers/ferreira12strength.pdf">PDF</a>]</li>
-<li>Catarina Moreira, Pável Calado and Bruno Martins, <i>Learning to Rank Academic Experts in the DBLP Dataset</i>, Expert Systems, vol. 13, no. 3, 2014 [<a href="papers/ferreira12strength.pdf">PDF</a>]</li>
-<li>João Santos, Ivo Anastácio and Bruno Martins, <i>Using Machine Learning Methods for Disambiguating Place References in Textual Documents</i>, Springer GeoJournal, vol. 13, no. 3, 2014 [<a href="papers/ferreira12strength.pdf">PDF</a>]</li>
-<li>Eduardo Cunha and Bruno Martins, <i>Using One-Class Classifiers and Multiple Kernel Learning For Defining Imprecise Geographic Regions</i>, Springer GeoJournal, vol. 13, no. 3, 2014 [<a href="papers/ferreira12strength.pdf">PDF</a>]</li>
-<li>Mário J. Silva, Bruno Martins, Marcirio Keys, Nuno Cardoso, Ana Paula Alfonso, <i>Adding Geographic Scopes to Web Resources</i>, Computers, Environment and Urban Systems, vol. 30, no. 4, 2006 [<a href="papers/ferreira12strength.pdf">PDF</a>]</li>
+<li>João Santos, Ivo Anastácio and Bruno Martins, <i>Desambiguação de Entidades Mencionadas em Textos na Língua Portuguesa ou Espanhola</i>, IEEE Latin America, vol. 13, no. 3, 2015 [<a href="http://www.revistaieeela.pea.usp.br/issues/vol13issue3March2015/42Santos.htm">PDF</a>]</li>
+<li>Catarina Moreira, Pável Calado and Bruno Martins, <i>Learning to Rank Academic Experts in the DBLP Dataset</i>, Expert Systems, vol. 32, no. 4, 2015 [<a href="http://onlinelibrary.wiley.com/doi/10.1111/exsy.12062/abstract">PDF</a>]</li>
+<li>João Santos, Ivo Anastácio and Bruno Martins, <i>Using Machine Learning Methods for Disambiguating Place References in Textual Documents</i>, Springer GeoJournal, vol. 80, no. 3, 2014 [<a href="http://link.springer.com/article/10.1007%2Fs10708-014-9553-y">PDF</a>]</li>
+<li>Eduardo Cunha and Bruno Martins, <i>Using One-Class Classifiers and Multiple Kernel Learning For Defining Imprecise Geographic Regions</i>, International Journal of Geographical Information Science, vol. 28, no. 11, 2014 [<a href="http://www.tandfonline.com/doi/abs/10.1080/13658816.2014.916040">PDF</a>]</li>
+<li>Mário J. Silva, Bruno Martins, Marcirio Keys, Nuno Cardoso, Ana Paula Alfonso, <i>Adding Geographic Scopes to Web Resources</i>, Computers, Environment and Urban Systems, vol. 30, no. 4, 2006 [<a href="http://www.sciencedirect.com/science/article/pii/S0198971505000608">PDF</a>]</li>
 
 			</ul>
 
