--- a/index.html
+++ b/index.html
@@ -184,6 +184,38 @@ involved in several research projects related to geospatial aspects in informati
 			2014/2015 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/GTI225/2014-2015/1-semestre">Data Analysis and Integration</a> (IST,MEIC)<br/>
 			2013/2014 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/AOBD10/2013-2014/2-semestre">Data Administration in Information Systems</a> (IST,MEIC,MERC)<br/>
 			2013/2014 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/SIG10/2013-2014/2-semestre">Systems for Geo-Referenced Information</a> (IST,MEIC)<br/>
+			2013/2014 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/IBD-Ead/2013-2014/1-semestre">Introduction to Data Bases</a> (MISE)<br/>
+			2013/2014 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/RInf/2013-2014/1-semestre">Information Retrieval</a> (IST,DEIC)<br/>
+			2013-2014 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/TInv/2013-2014/1-semestre">Research Topics</a> (IST,DEIC)<br/>			
+			2013/2014 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/BD4/2013-2014/1-semestre">Databases</a> (IST,LEIC,LERC)<br/>
+			2013/2014 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/GTI22/2013-2014/1-semestre">Data Analysis and Integration</a> (IST,MEIC)<br/>
+			2012/2013 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/AOBD7/2012-2013/2-semestre">Data Administration in Information Systems</a> (IST,MEIC,MERC)<br/>
+			2012/2013 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/SIG4/2012-2013/2-semestre">Systems for Geo-Referenced Information</a> (IST,MEIC)<br/>
+			2012/2013 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/RInf/2012-2013/1-semestre">Information Retrieval</a> (IST,DEIC)<br/>
+			2012/2013 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/GTI2/2012-2013/1-semestre">Data Analysis and Integration</a> (IST,MEIC)<br/>
+			2011/2012 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/AOBD6/2011-2012/2-semestre">Data Administration in Information Systems</a> (IST,MEIC)<br/>
+			2011/2012 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/SIG6/2011-2012/2-semestre">Systems for Geo-Referenced Information</a> (IST,MEIC)<br/>
+			2011/2012 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/RInf/2011-2012/1-semestre">Information Retrieval</a> (IST,DEIC)<br/>
+			2011/2012 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/GTI-2/2011-2012/1-semestre">Data Analysis and Integration</a> (IST,MEIC)<br/>
+			2010/2011 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/AOBD3/2010-2011/2-semestre">Data Administration in Information Systems</a> (IST,MEIC)<br/>
+			2010/2011 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/SIG6/2010-2011/2-semestre">Systems for Geo-Referenced Information</a> (IST,MEIC)<br/>
+			2010/2011 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/RInf/2010-2011/1-semestre">Information Retrieval</a> (IST,DEIC)<br/>
+			2010/2011 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/GTI/2010-2011/1-semestre">Data Analysis and Integration</a> (IST,MEIC)<br/>
+			2009/2010 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/AOBD/2009-2010/2-semestre">Data Administration in Information Systems</a> (IST,MEIC)<br/>
+			2009/2010 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/SIG3/2009-2010/2-semestre">Systems for Geo-Referenced Information</a> (IST,MEIC)<br/>
+			2009/2010 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/RInf/2009-2010/1-semestre">Information Retrieval</a> (IST,DEIC)<br/>
+			2009/2010 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/GTI/2009-2010/1-semestre">Data Analysis and Integration</a> (IST,MEIC)<br/>
+			2009/2010 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/BD3/2009-2010/1-semestre">Databases</a> (IST,LEIC)<br/>
+			2008/2009 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/AOBD/2008-2009/2-semestre">Data Administration in Information Systems</a> (IST,MEIC,MERC)<br/>
+			2008/2009 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/RInf/2008-2009/1-semestre">Information Retrieval</a> (IST,DEIC)<br/>
+			2008/2009 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/GTI/2008-2009/1-semestre">Data Analysis and Integration</a> (IST,MEIC)<br/>
+			2008/2009 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/BD4/2008-2009/1-semestre">Databases</a> (IST,LEIC,LERC)<br/>
+			2007/2008 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/AOBD-2/2007-2008/2-semestre">Data Administration in Information Systems</a> (IST,MEIC,MERC)<br/>
+			2007/2008 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/GTI/2007-2008/1-semestre">Data Analysis and Integration</a> (IST,MEIC)<br/>
+			2007/2008 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/BD-3/2007-2008/1-semestre">Databases</a> (IST,LEIC,LERC)<br/>
+			2006/2007 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/SD/2006-2007/2-semestre">Distributed Systems</a> (IST,LERC)<br/>
+			2006/2007 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/BD_2/2006-2007/1-semestre">Databases</a> (IST,LEIC)<br/>
+			2006/2007 | <a href="https://fenix.tecnico.ulisboa.pt/disciplinas/ACSI_2/2006-2007/1-semestre">Analysis and Design of Information Systems</a> (IST,LEIC)<br/>
 		</td>
     	</tr>
 	<tr>
