--- a/index.html
+++ b/index.html
@@ -361,12 +361,11 @@ involved in several research projects related to geospatial aspects in informati
 
 			</ul> 
 
-<!--			<h3>Other Publications</h3>
+			<h3>Other Publications</h3>
 
 			<ul>
 
-<li>Authors, <i>Title</i>, Conference Name, 2015 [<a href="papers/vasilyev13delays.pdf">PDF</a>] </li>
--->
+<li>Dirk Ahlers, Erik Wilde and Bruno Martins, <i>Report on the Fourth Workshop on Location and the Web (LocWeb 2014)</i>, SIGIR Forum, vol. 49, no. 1, 2015 [<a href="http://sigir.org/files/forum/2015J/p035.pdf">PDF</a>]</li>
 
 			</ul>
 
