--- a/index.html
+++ b/index.html
@@ -272,8 +272,8 @@ involved in several research projects related to geospatial aspects in informati
 
 			<ul>
 <li>Fernando Melo and Bruno Martins, <i>Georeferencing Textual Documents</i>, Proceedings of the ACM Workshop on Geographic Information Retrieval, 2015 </li>
-<li>Bruno Martins, <i>Spatial Role Labeling</i>, Proceedings of the ACM Workshop on Geographic Information Retrieval, 2015 </li>
-<li>Bruno Martins, Dirk Ahlers and Javier, <i>Knowledge Base</i>, Proceedings of the ACM Workshop on Geographic Information Retrieval, 2015 </li>
+<li>Bruno Martins, <i>Spatial Role Labeling with Convolutional Neural Networks</i>, Proceedings of the ACM Workshop on Geographic Information Retrieval, 2015 </li>
+<li>Bruno Martins, Francisco J. López-Pellicer and Dirk Ahlers, <i>Expanding the Utility of Geospatial Knowledge Bases by Linking Concepts to WikiText and Polygonal Boundaries</i>, Proceedings of the ACM Workshop on Geographic Information Retrieval, 2015 </li>
 <li>David Batista, Bruno Martins and Mário J. Silva, <i>Semi-Supervised Bootstrapping of Relationship Extractors with Distributional Semantics</i>, Proceedings of the Conference on Empirical Methods in Natural Language Processing, 2015 [<a href="papers/paper.pdf">PDF</a>] </li>
 <li>Tiago Gonçalves, Bruno Martins and Ana Paula Afonso, <i>Improving Spatial Awareness for Human Trajectory Visualization in Space-Time Cubes</i>, Proceedings of the International Conference on Human-Computer Interaction, 2015 [<a href="papers/paper.pdf">PDF</a>] </li>
 <li>Iman Mirrezaei, Bruno Martins and Isabel Cruz, <i>The Triplex Approach for Recognizing Semantic Relations from Noun Phrases, Appositions, and Adjectives</i>, Proceedings of the Workshop on Knowledge Discovery and Data Mining meets Linked Open Data, 2015 [<a href="papers/paper.pdf">PDF</a>] </li>
