--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
 									<img border="0" src="my-photo.jpg" width="150" style="border-radius: 50%;">
 								</td>
 							<tr>
+							<br/>
+                                                        <tr>
+                                                                <td>
+                                                                        <img border="0" src="my-photo2.jpg" width="150" style="border-radius: 50%;">
+                                                                </td>
+                                                        <tr>
 						</table>
 					</td>
 				</tr> -->
