--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@ involved in several research projects related to geospatial aspects in informati
 			<h3>International Journal Papers</h3>
 
 			<ul>
-
+<li>Tiago Gonçalves, Ana Paula Afonso and Bruno Martins, <i>Cartographic Visualization of Human Trajectory Data: Overview and Analysis</i>, Journal of Location Based Services, vol. 9, no. 2, 2015 [<a href="http://www.tandfonline.com/doi/full/10.1080/17489725.2015.1074736">PDF</a>]</li>
 <li>João Santos, Ivo Anastácio and Bruno Martins, <i>Desambiguação de Entidades Mencionadas em Textos na Língua Portuguesa ou Espanhola</i>, IEEE Latin America, vol. 13, no. 3, 2015 [<a href="http://www.revistaieeela.pea.usp.br/issues/vol13issue3March2015/42Santos.htm">PDF</a>]</li>
 <li>Catarina Moreira, Pável Calado and Bruno Martins, <i>Learning to Rank Academic Experts in the DBLP Dataset</i>, Expert Systems, vol. 32, no. 4, 2015 [<a href="http://onlinelibrary.wiley.com/doi/10.1111/exsy.12062/abstract">PDF</a>]</li>
 <li>João Santos, Ivo Anastácio and Bruno Martins, <i>Using Machine Learning Methods for Disambiguating Place References in Textual Documents</i>, Springer GeoJournal, vol. 80, no. 3, 2014 [<a href="http://link.springer.com/article/10.1007%2Fs10708-014-9553-y">PDF</a>]</li>
