--- a/index.html
+++ b/index.html
@@ -47,12 +47,6 @@
 									<img border="0" src="my-photo.jpg" width="150" style="border-radius: 50%;">
 								</td>
 							<tr>
-							<br/>
-                                                        <tr>
-                                                                <td>
-                                                                        <img border="0" src="my-photo2.jpg" width="150" style="border-radius: 50%;">
-                                                                </td>
-                                                        <tr>
 						</table>
 					</td>
 				</tr> -->
@@ -157,6 +151,10 @@ involved in several research projects related to geospatial aspects in informati
 			<table border=0 cellspacing=0 cellpadding=0>
 				<tr align="center">
 					<td><img src="my-photo.jpg" width="150" style="border-radius: 50%;"/></td>
+				</tr>
+				<br/>
+				<tr align="center">
+					<td><img src="my-photo2.jpg" width="150" style="border-radius: 50%;"/></td>
 				</tr>
 			</table>
 		</td>
