--- a/index.html
+++ b/index.html
@@ -152,7 +152,8 @@ involved in several research projects related to geospatial aspects in informati
 				<tr align="center">
 					<td><img src="my-photo.jpg" width="150" style="border-radius: 50%;"/></td>
 				</tr>
-				<br/><br/>
+				<tr><td>&nbsp;</td></tr>
+				<tr><td>&nbsp;</td></tr>
 				<tr align="center">
 					<td><img src="my-photo2.jpg" width="150" style="border-radius: 50%;"/></td>
 				</tr>
