--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ involved in several research projects related to geospatial aspects in informati
 				<tr>
 					<td>
 						<strong>Address:</strong><br/>						
-						Bruno Emanuel Martins<br/>
+						Bruno Emanuel da Graça Martins<br/>
 						INESC-ID<br/>
 						Rua Alves Redol, 9<br/>
 						1000-029 Lisbon<br/>
@@ -270,7 +270,6 @@ involved in several research projects related to geospatial aspects in informati
 <li>João Santos, Ivo Anastácio and Bruno Martins, <i>Using Machine Learning Methods for Disambiguating Place References in Textual Documents</i>, Springer GeoJournal, vol. 80, no. 3, 2014 [<a href="http://link.springer.com/article/10.1007%2Fs10708-014-9553-y">PDF</a>]</li>
 <li>Eduardo Cunha and Bruno Martins, <i>Using One-Class Classifiers and Multiple Kernel Learning For Defining Imprecise Geographic Regions</i>, International Journal of Geographical Information Science, vol. 28, no. 11, 2014 [<a href="http://www.tandfonline.com/doi/abs/10.1080/13658816.2014.916040">PDF</a>]</li>
 <li>Mário J. Silva, Bruno Martins, Marcirio Keys, Nuno Cardoso, Ana Paula Alfonso, <i>Adding Geographic Scopes to Web Resources</i>, Computers, Environment and Urban Systems, vol. 30, no. 4, 2006 [<a href="http://www.sciencedirect.com/science/article/pii/S0198971505000608">PDF</a>]</li>
-
 			</ul>
 
 			<h3>Conference and Workshop Papers</h3>
@@ -369,9 +368,14 @@ involved in several research projects related to geospatial aspects in informati
 			<h3>Other Publications</h3>
 
 			<ul>
-
 <li>Dirk Ahlers, Erik Wilde and Bruno Martins, <i>Report on the Fourth Workshop on Location and the Web (LocWeb 2014)</i>, SIGIR Forum, vol. 49, no. 1, 2015 [<a href="http://sigir.org/files/forum/2015J/p035.pdf">PDF</a>]</li>
-
+<li>Miguel Costa and Bruno Martins, <i>Uma Comparação Sistemática de Diferentes Abordagens para a Sumarização Automática Extrativa de Textos em Português</i>, Linguamática, Revista para o Processamento Automático das Línguas Ibéricas, vol. 7, no. 1, 2015 [<a href="http://www.linguamatica.com/index.php/linguamatica/article/view/V7N1-2">PDF</a>]</li>
+<li>Indira Brito and Bruno Martins, <i>Realização de Previsões com Conteúdos Textuais em Português</i>, Linguamática, Revista para o Processamento Automático das Línguas Ibéricas, vol. 6, no. 1, 2014 [<a href="http://www.linguamatica.com/index.php/linguamatica/article/view/v6n1-04">PDF</a>]</li>
+<li>David Batista, David Forte, Rui Silva, Bruno Martins and Mário Silva, <i>Extração de Relações Semânticas de Textos em Português Explorando a DBpédia e a Wikipédia</i>, Linguamática, Revista para o Processamento Automático das Línguas Ibéricas, vol. 5, no. 1, 2013 [<a href="http://linguamatica.com/index.php/linguamatica/article/view/157">PDF</a>]</li>
+<li>Duarte Dias, Ivo Anastácio and Bruno Martins, <i>Geocodificação de Documentos Textuais com Classificadores Hierárquicos Baseados em Modelos de Linguagem</i>, Linguamática, Revista para o Processamento Automático das Línguas Ibéricas, vol. 4, no. 2, 2012 [<a href="http://linguamatica.com/index.php/linguamatica/article/view/139">PDF</a>]</li>
+<li>José Borbinha, Gilberto Pedrosa, João Luzio, Hugo Manguinhas and Bruno Martins, <i>The DIGMAP virtual digital library</i>, International Web Journal on Sciences and Technologies Affined to History of Cartography and Maps (e-Perimetron), vol. 7, no. 1, 2009 [<a href="http://www.e-perimetron.org/Vol_4_1/Borbinha_et_al.pdf">PDF</a>]</li>
+<li>Hugo Manguinhas, Bruno Martins, José Borbinha, Siabato Vaca and Willington Libardo, <i>The DIGMAP geo-temporal Web gazetteer service</i>, Linguamática, International Web Journal on Sciences and Technologies Affined to History of Cartography and Maps (e-Perimetron), vol. 4, no. 1, 2009 [<a href="http://www.e-perimetron.org/Vol_4_1/Manguinhas_et_al.pdf">PDF</a>]</li>
+<li>Bruno Martins, Hugo Manguinhas, José Borbinha, Siabato Vaca and Willington Libardo, <i>A geo-temporal information extraction service for processing descriptive metadata in digital libraries</i>, International Web Journal on Sciences and Technologies Affined to History of Cartography and Maps (e-Perimetron), vol. 5, no. 1, 2009 [<a href="http://www.e-perimetron.org/Vol_4_1/Martins_et_al.pdf">PDF</a>]</li>
 			</ul>
 
 			<h3>PhD Thesis</h3>
